--- a/src/mjml/index.mjml
+++ b/src/mjml/index.mjml
@@ -16,11 +16,12 @@
       <mj-all font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans serif"/>
       <mj-class name="T30-500" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="30px" line-height="40px" font-weight="500"/>
       <mj-class name="T17-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="17px" line-height="25px" font-weight="500"/>
-      <mj-class name="T12-400" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="12px" line-height="13px" font-weight="400"/>
       <mj-class name="T35-300" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="35px" font-weight="300"/>
       <mj-class name="T27-300" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="27px" font-weight="300"/>
       <mj-class name="T24-500" font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size="24px" font-weight="500"/>
       <mj-class name="T14-400" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="14px" font-weight="400"/>
+      <mj-class name="T12-400" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="12px" font-weight="400"/>
+      <mj-class name="T11-300" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="11px" font-weight="300"/>
       <mj-button padding="0" inner-padding="10px 45px" border-radius="20px" font-family="&quot;Source Sans 3&quot;, Arial, Helvetica, sans-serif" font-style="normal" font-size="16px" line-height="20px" font-weight="700" text-transform="uppercase"></mj-button>
       <mj-class name="cT1" color="#2c262d"/>
       <mj-class name="bgT1" background-color="#2c262d"></mj-class>
@@ -133,7 +134,7 @@
         <mj-text padding="0" align="center" mj-class="T35-300" line-height="42px">Protégez vos données</mj-text>
         <mj-text padding="0" align="center" mj-class="T14-400" line-height="18px">Toutes les entreprises produisent des données pour différents aspects de leur activité. <strong>La sauvegarde de ces données est essentielle pour tout plan opérationnel ou de continuité d'activité.</strong> Si vous recherchez une solution de sauvegarde de données, ReadyNAS est la meilleure alternative pour les PME ayant un budget limité. Hautement évolutives, ces solutions sont fiables et offrent une sécurité exceptionnelle.</mj-text>
         <mj-button>retrouvez toutes nos offres sur le stockage</mj-button>
-        <mj-text padding="0" align="center">* Offres spéciales partenaires valables chez les distributeurs officiels ALSO, INGRAM, EXERTIS, TECH DATA jusqu'au 24/09/2021 dans la limite des stocks facturables. Non cumulables avec d'autres offres spéciales. Ces offres peuvent être arrêtées à tout moment par NETGEAR. Prix d'achat revendeur promotionnels indicatifs, les distributeurs NETGEAR sont libres de fixer leur prix de revente.</mj-text>
+        <mj-text padding="0" align="center" mj-class="T11-300" line-height="14px">* Offres spéciales partenaires valables chez les distributeurs officiels ALSO, INGRAM, EXERTIS, TECH DATA jusqu'au 24/09/2021 dans la limite des stocks facturables. Non cumulables avec d'autres offres spéciales. Ces offres peuvent être arrêtées à tout moment par NETGEAR. Prix d'achat revendeur promotionnels indicatifs, les distributeurs NETGEAR sont libres de fixer leur prix de revente.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section>
@@ -154,11 +155,11 @@
     </mj-section>
     <mj-section>
       <mj-column>
-        <mj-text>01 39 23 99 59 | reponserapide@netgear.com | NETGEAR | 2 rue de Marly le roi 78150 LE CHESNAY</mj-text>
-        <mj-text>Cet email est destiné à %%emailaddr%% . Si vous ne souhaitez plus recevoir d'emails, vous pouvez vous désinscrire .</mj-text>
-        <mj-text>Cet email a été envoyé par : %%Member_Busname%%</mj-text>
-        <mj-text>%%Member_Addr%% %%Member_City%%, %%Member_State%%, %%Member_PostalCode%%, %%Member_Country%%</mj-text>
-        <mj-text>Mise à jour de votre profil</mj-text>
+        <mj-text padding="0" mj-class="T12-400" line-height="13px">01 39 23 99 59 | reponserapide@netgear.com | NETGEAR | 2 rue de Marly le roi 78150 LE CHESNAY</mj-text>
+        <mj-text padding="0" mj-class="T12-400" line-height="13px">Cet email est destiné à %%emailaddr%% . Si vous ne souhaitez plus recevoir d'emails, vous pouvez vous désinscrire .</mj-text>
+        <mj-text padding="0" mj-class="T12-400" line-height="13px">Cet email a été envoyé par : %%Member_Busname%%</mj-text>
+        <mj-text padding="0" mj-class="T12-400" line-height="13px">%%Member_Addr%% %%Member_City%%, %%Member_State%%, %%Member_PostalCode%%, %%Member_Country%%</mj-text>
+        <mj-text padding="0" mj-class="T12-400" line-height="13px">Mise à jour de votre profil</mj-text>
       </mj-column>
     </mj-section>
   </mj-body>
