--- a/src/templates/_layout.pug
+++ b/src/templates/_layout.pug
@@ -15,12 +15,13 @@ mjml
             mj-all(font-family='"Source Sans 3", Arial, Helvetica, sans serif')/
             mj-class(name='T30-500' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='30px' line-height='40px' font-weight='500')/
             mj-class(name='T17-500' font-family="Arial, Helvetica, sans-serif" font-style="normal" font-size='17px' line-height='25px' font-weight='500')/
-            mj-class(name='T12-400' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='12px' line-height='13px' font-weight="400")/
             
             mj-class(name='T35-300' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='35px' font-weight='300')/
             mj-class(name='T27-300' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='27px' font-weight='300')/
             mj-class(name='T24-500' font-family='Arial, Helvetica, sans-serif' font-style="normal" font-size='24px' font-weight='500')/
             mj-class(name='T14-400' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='14px' font-weight="400")/
+            mj-class(name='T12-400' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='12px' font-weight="400")/
+            mj-class(name='T11-300' font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='11px' font-weight="300")/
             mj-button(padding="0" inner-padding="10px 45px" border-radius="20px" font-family='"Source Sans 3", Arial, Helvetica, sans-serif' font-style="normal" font-size='16px' line-height='20px' font-weight='700' text-transform="uppercase")
             //- Black colors text
             mj-class(name="cT1" color="#2c262d")/
